--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <title>Toy Tale</title>
     <link rel="stylesheet" href="index.css" />
+    <style>
+      img {
+        width: 200px;
+        height: 300px;
+        object-fit: contain;
+      }
+    </style>
   </head>
   <body>
     <div id="toy-header">
